@@ -6,7 +6,6 @@
  * wrap_execv(const char *path, char *const *argv) {
  *	int rc = -1;
  */
-
 	if (!pseudo_get_value("PSEUDO_RELOADED"))
 		pseudo_setupenv();
 	else {
@@ -14,6 +13,10 @@
 		pseudo_dropenv();
 	}
 
+	/* if exec() fails, we may end up taking signals unexpectedly...
+	 * not much we can do about that.
+	 */
+	sigprocmask(SIG_SETMASK, &pseudo_saved_sigmask, NULL);
 	rc = real_execv(path, argv);
 
 /*	return rc;
