@@ -1,3 +1,7 @@
+2010-08-24:
+	* (seebs) try to restore signal mask before calling exec()
+	* (seebs) move errno restoration after code which could set errno
+
 2010-08-19:
 	* (seebs) handle insane edge case involving regcomp/regexec
 
